1.76

Greatly reduce "delayed challenge display" caused by getAnswerSetsFor taking too long to run because of triggered System.gc caused by levenstein stuff.
Added brief delay of challenge card if a touch down is detected at "show" time.
Added brief disablement of 'check' button to try and reduce 'click-through'.
Add "Confirm Quit Session" when "Main Menu" hit on learning screen.
UI adjustments for "Challenge Cards".
New XBrief session added by special request.

1.75

Updated to libGDX 1.5.5.
Fix it so it is no longer possible to pause the game when a challenge is "invisible" on the practice screen.

1.73

Fix backwards sync issue caused when "active cards" are removed because they no longer exist in the master deck.
Fix other bugs in sync code.

1.72

Bug fixes

1.70

Google Play Drive Sync + Google Play Leader Boards 

1.66

Bugfix for Leaderboard Login

1.64

Google Play Leaderboards now available for Android and Deskop.
Better scoring for Leaderboards.
Achievements/Levels setup.

The Google Play Leaderboards do not require Google Play to be installed and should work with KindleFire and other tablets.

1.61

Fix error with ᎢᏍᎩ- "You one + you all" should read "You one + them and me"
Reduced ᎢᏍᎩ- challenges from 3 to 2 cards.
Fix error with ᏍᎩᏂ- "You one + you two" should read "You one + him and me"
Reduced ᏍᎩᏂ- challenges from 3 to 2 cards.
Added "Level" number calculation to stats.
Added "Level" name to stats.
Added description of "Level" and "Percentages" to instructions under "Your stats"
Added Facebook Stats Posting for "Desktop" edition via web link.

1.60

Added option for "session length".
Added option for "initial card time limit"
Fix deck sorting regression caused by code cleanup.
Better main menu display (display fitting).
Removed "View Challenges"
Added "Instructions"
Moved changelog to "assets" folder of app.
Adjusted "ᎢᏨ" to be understandable by 2 English entries.
Append "changelog.txt" to "about.txt" for "About" display.

1.59
