@@ -1,5 +1,6 @@
 1.76
 
+Import Levenstein routing from Apache StringUtils and fix to use static arrays in a synchronized static function to stop serious GC issues for Android/iOS.
 Greatly reduce "delayed challenge display" caused by getAnswerSetsFor taking too long to run because of triggered System.gc caused by levenstein stuff.
 Added brief delay of challenge card if a touch down is detected at "show" time.
 Added brief disablement of 'check' button to try and reduce 'click-through'.
